[gd_scene load_steps=2 format=3 uid="uid://vkq3eq2tcj2l"]

[ext_resource type="Script" path="res://Scenes/gui/inventory.gd" id="1_o5cdc"]

[node name="Inventory" type="ColorRect"]
offset_top = 1.0
offset_right = 600.0
offset_bottom = 101.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_o5cdc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 596.0
offset_bottom = 96.0

[node name="Item1" type="Sprite2D" parent="."]
position = Vector2(50, 50)
scale = Vector2(0.5, 0.5)

[node name="Item2" type="Sprite2D" parent="."]
position = Vector2(150, 50)
scale = Vector2(0.5, 0.5)

[node name="Item3" type="Sprite2D" parent="."]
position = Vector2(250, 50)
scale = Vector2(0.5, 0.5)

[node name="Item4" type="Sprite2D" parent="."]
position = Vector2(350, 50)
scale = Vector2(0.5, 0.5)

[node name="Item5" type="Sprite2D" parent="."]
position = Vector2(450, 50)
scale = Vector2(0.5, 0.5)

[node name="Item6" type="Sprite2D" parent="."]
position = Vector2(550, 50)
scale = Vector2(0.5, 0.5)
